Fixes align for the <h*> labels

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -72,6 +72,7 @@ h6 {
     font-weight: bold;
     line-height: 1.65;
     color: #4A4A4A;
+    text-align: left;
     text-rendering: optimizeLegibility;
 }
 
